[gd_scene load_steps=8 format=3 uid="uid://cvg7r7lb625aw"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_ofxxp"]
[ext_resource type="Texture2D" uid="uid://b5ib34vkp7jjh" path="res://Entities/arrow.png" id="2_xycmf"]
[ext_resource type="Texture2D" uid="uid://c6mwhkj2aj7ff" path="res://Entities/icon.svg" id="3_uo0pd"]

[sub_resource type="Curve" id="Curve_albx3"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.75, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_n2hib"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bt4oy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hh3ye"]
height = 44.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 128
script = ExtResource("1_ofxxp")
speedCurve = SubResource("Curve_albx3")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_n2hib")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackDuration" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="MouseDeadZone" type="Area2D" parent="."]
position = Vector2(0, -21)
scale = Vector2(1.01531, 1.01531)
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDeadZone"]
position = Vector2(0, -5.72205e-06)
scale = Vector2(5.43119, 5.43119)
shape = SubResource("CircleShape2D_bt4oy")

[node name="ArrowRotationPoint" type="Marker2D" parent="."]
position = Vector2(0, -21)

[node name="Arrow" type="Sprite2D" parent="ArrowRotationPoint"]
position = Vector2(54, 0)
scale = Vector2(0.659627, 0.659627)
texture = ExtResource("2_xycmf")

[node name="Hitbox" type="Area2D" parent="." groups=["player"]]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -21)
scale = Vector2(1.74115, 1.74115)
shape = SubResource("CapsuleShape2D_hh3ye")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -21)
scale = Vector2(0.203125, 0.5)
texture = ExtResource("3_uo0pd")

[node name="DashTracerLine" type="Line2D" parent="."]
position = Vector2(-360, -344)
default_color = Color(0, 0, 0, 1)

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="AttackDuration" to="." method="_on_attack_duration_timeout"]
[connection signal="mouse_entered" from="MouseDeadZone" to="." method="_on_mouse_dead_zone_mouse_entered"]
[connection signal="mouse_exited" from="MouseDeadZone" to="." method="_on_mouse_dead_zone_mouse_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered_exited"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_entered_exited"]
